# rust-webplatform

./: .gitignore  .travis.yml  Cargo.toml  README.md  justfile
examples/hello_world/: Cargo.toml  README.md  justfile
examples/hello_world/assets/static/: index.html  main.js
examples/hello_world/src/: main.rs
src/: event.rs  html_node.rs  interop.rs  lib.rs  macros.rs
src/api/: document.rs  local_storage.rs  mod.rs  websocket.rs
