[package]
name = "hello_world"
version = "0.1.0"
publish = false
license = "MIT/Apache-2.0"
description = "Simple Web Platform Demo."
authors = [
    "Tim Cameron Ryan <tim@timryan.org>",
    "Alexander Irbis <irbis.labs@gmail.com>",
]
#repository = "https://github.com/tcr/rust-webplatform"
#homepage = "https://github.com/tcr/rust-webplatform"
workspace = "../.."


[dependencies.webplatform]
path = "../.."
